หน้าแสดงผลของ กระดาษทำการ

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -51,8 +51,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <!-- <a href="javascript:;" routerLink="/ope04/5">กระดาษทำการจ่ายสินค้าสำเร็จรูป </a> -->
-                                                กระดาษทำการจ่ายสินค้าสำเร็จรูป
+                                                <a href="javascript:;" routerLink="/ope04/5-1">กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                                <!-- กระดาษทำการจ่ายสินค้าสำเร็จรูป -->
                                             </div>
                                         </div>
                                     </div>
