--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5-1/ope04-5-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5-1/ope04-5-1.component.html
@@ -2,7 +2,7 @@
 
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต</h2>
+    <h2 class="ui header">ผลการตรวจสอบกระดาษทำการจ่ายสินค้าสำเร็จรูป</h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
       <span>ระบุรายละเอียดกระดาษทำการ</span>
@@ -72,7 +72,7 @@
           <tr>
             <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
             <th style="text-align: center !important;" rowspan="2">ทะเบียนสรรพสามิต</th>
-            <th style="text-align: center !important;" rowspan="2">เลขประจำตัวผู้เสียภาษี</th>
+            <th style="text-align: center !important;" rowspan="2">ผู้เสียภาษี</th>
 
             <th style="text-align: center !important;" rowspan="2">ประเภท</th>
             <th style="text-align: center !important;" rowspan="2">พิกัด</th>
