--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5.component.html
@@ -113,10 +113,12 @@
                     <tr>
                         <th class="text-center">ลำดับที่</th>
                         <th class="text-center">รายการ</th>
-                        <th class="text-center">ปริมาณรับจากการผลิต ตามงบเดือน</th>
-                        <th class="text-center">ปริมาณรับจากการผลิต แบบ ภส.07-02</th>                        
-                        <th class="text-center">ใบรับสินค้าสำเร็จรูป</th>
-                        <th class="text-center">ผลต่างคู่ข้อมูล</th>
+                        <th class="text-center" style="background-color: teal">ปริมาณจ่ายสิค้าสำเร็จรูปในใบกำกับภาษี</th>
+                        <th class="text-center" style="background-color: teal">ปริมาณจากการตรวจสอบ</th>                        
+                        <th class="text-center">ปริมาณจากงบเดือน</th>
+                        <th class="text-center">ปริมาณข้อมูลที่มากที่สุด</th>
+                        <th class="text-center">ปริมาณจ่ายสินค้าสำเร็จรูป</th>
+                        <th class="text-center">ผลต่าง</th>
                     </tr>
                 </thead>
 
