--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -113,7 +113,7 @@
             <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
             <th style="text-align: center !important;" rowspan="2">รายการ</th>
             <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
-            <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
+            <th style="text-align: center !important; background-color: teal" colspan="4">ใบเสร็จรับเงิน</th>
             <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
           </tr>
           <tr>
@@ -121,10 +121,10 @@
             <th style="text-align: center !important;">ปริมาณ</th>
             <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
 
-            <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
-            <th style="text-align: center !important;">จำนวนภาษี</th>
-            <th style="text-align: center !important;">ปริมาณ</th>
-            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+            <th style="text-align: center !important; background-color: teal">เลขที่ใบเสร็จ</th>
+            <th style="text-align: center !important; background-color: teal">จำนวนภาษี</th>
+            <th style="text-align: center !important; background-color: teal">ปริมาณ</th>
+            <th style="text-align: center !important; background-color: teal">ภาษีต่อหน่วย</th>
           </tr>
         </thead>
 
