--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -113,7 +113,7 @@
             <th class="text-center">ลำดับที่</th>
             <th class="text-center">รายการ</th>
             <th class="text-center">ราคาสินค้าตามแบบแจ้ง</th>
-            <th class="text-center">ราคาจากข้อมูลภายนอก</th>
+            <th class="text-center" style="background-color: teal">ราคาจากข้อมูลภายนอก</th>
             <th class="text-center">ราคาต่อหน่วยตามประกาศกรมสรรพสามิต</th>
             <th class="text-center">ราคาจากการตรวจสอบ</th>
             <th class="text-center">ราคาต่อหน่วยจากรายการภาษี ภส 03-07</th>
