--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-5/int08-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-5/int08-5.component.html
@@ -54,6 +54,8 @@
           <th style="text-align: center !important;">ชื่อสำนักงานสรรพสามิต</th>
           <th style="text-align: center !important;">ช่วงเดือนที่</th>
           <th style="text-align: center !important;">ถึงเดือนที่</th>
+          <th style="text-align: center !important;">จำนวนใบเสร็จ</th>
+          <th style="text-align: center !important;">จำนวนใบเสีย</th>
           <th style="text-align: center !important;">จำนวนความเสี่ยง</th>
           <th style="text-align: center !important;">รายละเอียดความเสี่ยง</th>
           <th style="text-align: center !important;">สถานะการตรวจ</th>
