--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -57,7 +57,7 @@
               <i class="dropdown icon"></i>
               <div class="default text">เลือก</div>
               <div class="menu">
-                <div class="item" data-value="1">สถานะผู้ประกอบการ</div>
+                <!-- <div class="item" data-value="1">สถานะผู้ประกอบการ</div> -->
                 <div class="item" data-value="2">ประกอบกิจการ</div>
                 <div  class="item" data-value="3">เลิกกิจการ</div>
                 <div class="item" data-value="4">โอนกิจการ</div>
