--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/get-app-roved/get-app-roved.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/get-app-roved/get-app-roved.component.html
@@ -21,7 +21,7 @@
             <div class="four wide field ui calendar" id="date1">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="calendar" [(ngModel)]="obj.date" name="date" id="date">
+                <input type="calendar" [(ngModel)]="obj.date" name="date" id="date" autocomplete="off">
               </div>
             </div>
           </div>
