--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -42,8 +42,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <!-- <a href="javascript:;" routerLink="/ope04/4">กระดาษทำการรับสินค้าสำเร็จรูป</a> -->
-                                                กระดาษทำการรับสินค้าสำเร็จรูป
+                                               <a href="javascript:;" routerLink="/ope04/4-1">กระดาษทำการรับสินค้าสำเร็จรูป</a>
+                                                <!-- กระดาษทำการรับสินค้าสำเร็จรูป -->
                                             </div>
                                         </div>
                                     </div>
