--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4-1/ope04-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4-1/ope04-4-1.component.html
@@ -1,324 +1,101 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">สร้างกระดาษทำการสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</h2>
+    <h2 class="ui header">ผลการตรวจสอบกระดาษทำการรับสินค้าสำเร็จรูป</h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
       <span>ระบุรายละเอียดกระดาษทำการ</span>
     </div>
+
     <div class="ui attached segment">
-      <form ngNativeValidate (submit)="onClickShow($event)" class="ui form">
-         <!-- row 1 -->
-         <div class="inline fields  ui grid">
-            <div class="three wide field required">
-                <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
-            </div>
-            <div class="four wide field">
-                <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
-            </div>
-            <div class="three wide field ">
-                <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
-            </div>
-            <div class="four wide field ">
-                <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
-            </div>
+      <form class="ui form" id="form" [formGroup]="formControl" (submit)="search()">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field required">
+            <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
+          </div>
+          <div class="four wide field" [ngClass]="{ 'error': submitted && f.exciseId.invalid }">
+            <select name="exciseId" id="exciseId" formControlName="exciseId" class="ui dropdown ai search full-width office">
+              <option value="">กรุณาเลือก</option>
+              <option *ngFor="let item of exciseIdList" value="{{item.value}}">{{item.label}}</option>
+            </select>
+          </div>
+          <div class="three wide field ">
+
+          </div>
+          <div class="four wide field ">
+
+          </div>
         </div>
 
-          <!-- row 2 -->
-          <div class="inline fields  ui grid">
-              <div class="three wide field ">
-                  <label class="text-right full-width">ผู้ประกอบการ</label>
-              </div>
-              <div class="four wide field">
-                  <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" 
-                      name="companyName" id="companyName" readonly="">
-              </div>
-              <div class="three wide field ">
-                  <label class="text-right full-width">เลขที่วิเคราะห์</label>
-              </div>
-              <div class="four wide field ">
-                  <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์"
-                      name="analysNumber" id="analysNumber" readonly="">
-              </div>
+        <!-- row 2 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field">
+            <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
           </div>
-
-          <!-- row 3 -->
-          <div class="inline fields  ui grid">
-              <div class="three wide field ">
-                  <label class="text-right full-width">ประเภท</label>
+          <div class="four wide field">
+            <div class="ui calendar full-width" id="dateF">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="startDate" type="text" id="startDate" formControlName="startDate" autocomplete="off"
+                  [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
               </div>
-              <div class="four wide field">
-                  <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
-              </div>
-              <div class="three wide field ">
-                  <label class="text-right full-width">พิกัด</label>
-              </div>
-              <div class="four wide field ">
-                  <input type="text" class="custom-readonly" placeholder="พิกัด"
-                      name="productType" id="productType" readonly="">
-              </div>
+            </div>
           </div>
-
-          <!-- row 4 -->
-          <div class="inline fields  ui grid">
-              <div class="three wide field required">
-                  <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
-              </div>
-              <div class="four wide field">
-                  <div class="ui calendar" id="calendarFront" style="width:100%">
-                      <div class="ui input left icon">
-                          <i class="calendar alter nate outline icon"></i>
-                          <input type="text" name="startDate" id="startDate" 
-                              autocomplete="off" placeholder="ดด/ปปปป" [attr.required]="true">
-                      </div>
-                  </div>
-              </div>
-              <div class="three wide field required ">
-                  <label class="text-right full-width">ถึง</label>
-              </div>
-              <div class="four wide field ">
-
-                  <div class="ui calendar" id="calendarLast" style="width:100%">
-                      <div class="ui input left icon">
-                          <i class="calendar alter nate outline icon"></i>
-                          <input type="text" name="endDate" id="endDate" autocomplete="off"
-                              [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
-                      </div>
-                  </div>
-              </div>
-          </div><br>
-          <div class="ui center aligned grid">
-              <div class="six wide column">
-                  <button class="ui mini primary button" type="submit">
-                      <i class="file icon"></i>
-                      แสดงกระดาษทำการ
-                  </button>
-                  <button class="ui mini button" (click)="clearAll()" type="reset">
-                      <i class="refresh icon"></i>
-                      ล้างข้อมูล
-                  </button>
-              </div>
+          <div class="three wide field">
+            <label class="text-right full-width">ถึง</label>
           </div>
+          <div class="four wide field">
+            <div class="ui calendar full-width" id="dateT">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="endDate" type="text" id="endDate" formControlName="endDate" autocomplete="off"
+                  [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <br><br>
+        <div class="ui stackable center aligned page grid">
+          <button class="ui mini primary button" type="submit"><i class="search icon"></i>
+            ค้นหา</button>
+          <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
+        </div><br>
       </form>
     </div>
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>อัพโหลด Template ข้อมูลปริมาณการเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</span>
-    </div>
 
-    <div class="ui attached segment">
-        <form id="upload-form" ngNativeValidate (submit)="onUpload($event)" class="ui form">
-            <!-- row 1 -->
-            <div class="inline fields  ui grid">
-                <div class="three wide field required">
-                    <label class="text-right full-width">เลือกไฟล์ Template ข้อมูล</label>
-                </div>
-                <div class="four wide field">
-                    <input class="inputfile" type="file" name="fileExel" id="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                        (change)="onChangeUpload($event)" required>
-                </div>
-                <div class="four wide field">
-                    <button class="ui mini primary button" type="submit">
-                        <i class="upload icon"></i>
-                        อัพโหลด
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
+    <div class="ui segment">
+      <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
+        <thead>
+          <tr>
+            <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
+            <th style="text-align: center !important;" rowspan="2">ทะเบียนสรรพสามิต</th>
+            <th style="text-align: center !important;" rowspan="2">ผู้เสียภาษี</th>
 
-    <div class="ui segment" *ngIf="showData">
-      <div class="ui grid center aligned">
-        <div class="sixteen wide column">
-          บ. ฮอนด้า มอเตอร์ ประเทศไทย
-          <br> กระดาษทำการสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป
-          <br> เดือน พ.ย. 2559 - ส.ค. 2559
-        </div>
-      </div>
+            <th style="text-align: center !important;" rowspan="2">ประเภท</th>
+            <th style="text-align: center !important;" rowspan="2">พิกัด</th>
+            <th style="text-align: center !important;" colspan="2">รอบระยะเวลาการตรวจสอบ</th>
+            <th style="text-align: center !important;" rowspan="2"></th>
+          </tr>
+          <tr>
+            <th style="text-align: center !important;">เริ่มต้น</th>
+            <th style="text-align: center !important;">สิ้นสุด</th>
+          </tr>
+        </thead>
+
+      </table>
       <br>
-      <div style="overflow-x: scroll;">
-        <table class="ui small celled table striped selectable" style="width: 140%;">
-          <thead>
-            <tr style="text-align: center;">
-              <th rowspan="2">ว/ด/ป.</th>
-              <th rowspan="2">เลขที่ใบสำคัญ</th>
-              <th rowspan="2">รายการ</th>
-              <th rowspan="2">จำนวนรับตามบัญชี ภส 07-02</th>
-              <th rowspan="2">สูตรการจากผลิต</th>
-              <th rowspan="2">เบิกตามสูตร</th>
-              <th rowspan="2">เบิกใช้จริง</th>
-              <th rowspan="2">ผลต่างวัตถุดิบ</th>
-              <th colspan="2">ผลิตได้ตามสูตร</th>
-              <th rowspan="2">ผลต่างสินค้าสำเร็จรูป</th>
-              <th colspan="2">หักสูญเสีย</th>
-              <th rowspan="2">คงเหลือ</th>
-            </tr>
-            <tr style="text-align: center;">
-              <th style="border-left: 1px solid rgba(34,36,38,.1);">แยกตามวัตถุดิบ</th>
-              <th>จำนวนสินค้าสำเร็จรูป</th>
-              <th>เปอร์เซ็นต์</th>
-              <th>จำนวน</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1/4/2560</td>
-              <td></td>
-              <td>เครื่องยนต์</td>
-              <td>90</td>
-              <td>1</td>
-              <td>90</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>100</td>
-              <td>90</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">&nbsp;</span>
-              </td>
-            </tr>
-            <tr>
-              <td>1/4/2560</td>
-              <td></td>
-              <td>ล้อ</td>
-              <td>90</td>
-              <td>4</td>
-              <td>360</td>
-              <td>360</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-              <td>90</td>
-              <td>90</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">&nbsp;</span>
-              </td>
-            </tr>
-            <tr>
-              <td>3/4/2560</td>
-              <td></td>
-              <td>เครื่องยนต์</td>
-              <td>90</td>
-              <td>1</td>
-              <td>90</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>100</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>10</td>
-              <td>10</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-            </tr>
-            <tr>
-              <td>3/4/2560</td>
-              <td></td>
-              <td>ล้อ</td>
-              <td>90</td>
-              <td>4</td>
-              <td>360</td>
-              <td>400</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">40</span>
-              </td>
-              <td>100</td>
-              <td>100</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10</span>
-              </td>
-              <td>10</td>
-              <td>10</td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-            </tr>
-            <tr>
-              <td>7/4/2560</td>
-              <td></td>
-              <td>เครื่องยนต์</td>
-              <td>60</td>
-              <td>1</td>
-              <td>60</td>
-              <td>66</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">6</span>
-              </td>
-              <td>66</td>
-              <td>66</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">6</span>
-              </td>
-              <td>10</td>
-              <td>4</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">2</span>
-              </td>
-            </tr>
-            <tr>
-              <td>7/4/2560</td>
-              <td></td>
-              <td>ล้อ</td>
-              <td>60</td>
-              <td>4</td>
-              <td>240</td>
-              <td>264</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">24</span>
-              </td>
-              <td>66</td>
-              <td>66</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">6</span>
-              </td>
-              <td>10</td>
-              <td>4</td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">2</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <br>
-
-      <div class="ui center aligned grid">
-        <div class="six wide column">
-          <button class="ui mini primary button">
-            <i class="print icon"></i>
-            บันทึกข้อมูล
-          </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
-        </div>
-      </div>
     </div>
-
     <br>
     <div class="ui grid center aligned">
-        <div class="sixteen wide column">
-            <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-                <i class="reply icon"></i> ย้อนกลับ
-            </button>
-        </div>
+      <div class="sixteen wide column">
+        <button class="ui mini button" routerLink="/select-form/rs001">
+          <i class="reply icon"></i>
+          ย้อนกลับ
+        </button>
+      </div>
     </div>
   </div>
 </div>
