--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
@@ -114,8 +114,8 @@
                         <th class="text-center">ลำดับที่</th>
                         <th class="text-center">รายการ</th>
                         <th class="text-center">ปริมาณรับจากการผลิต ตามงบเดือน</th>
-                        <th class="text-center" style="background-color: teal">ปริมาณรับจากการผลิต แบบ ภส.07-02</th>                        
-                        <th class="text-center" style="background-color: teal">ใบรับสินค้าสำเร็จรูป</th>
+                        <th class="text-center" style="background-color: teal; color: #ffffff" >ปริมาณรับจากการผลิต แบบ ภส.07-02</th>                        
+                        <th class="text-center" style="background-color: teal; color: #ffffff">ใบรับสินค้าสำเร็จรูป</th>
                         <th class="text-center">ผลต่างคู่ข้อมูล</th>
                     </tr>
                 </thead>
