--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/follow-supervision/follow-supervision.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/follow-supervision/follow-supervision.component.html
@@ -13,7 +13,7 @@
               <label>ส่วนราชการ</label>
             </div>
             <div class="four wide field">
-              <input type="text" name="governmentService" [(ngModel)]="obj.governmentService" >
+              <input type="text" id="governmentService" name="governmentService" [(ngModel)]="obj.governmentService" >
             </div>
             <div class="one wide field"></div>
             <div class="one wide field">
@@ -22,7 +22,7 @@
             <div class="four wide field ui calendar" id="date1">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="calendar" id="date" [(ngModel)]="obj.date" >
+                <input type="calendar" id="date" name="date" [(ngModel)]="obj.date" >
               </div>
             </div>
           </div>
@@ -40,7 +40,7 @@
               </label>
             </div>
             <div class="four wide field">
-              <input type="text"  id="study" [(ngModel)]="obj.study" >
+              <input type="text"  id="study" name="study" [(ngModel)]="obj.study" >
             </div>
           </div>
 
@@ -50,7 +50,7 @@
               <label>ตรวจปฏิบัติการแนะนำกำกัลดูแล สถานประกอบการ / โรงอุตสาหกรรม</label>
             </div>
             <div class="four wide field">
-              <input type="text" id="actionMonitoring" [(ngModel)]="obj.actionMonitoring">
+              <input type="text" id="actionMonitoring" name="actionMonitoring" [(ngModel)]="obj.actionMonitoring">
             </div>
           </div>
 
@@ -65,7 +65,7 @@
             <div class="inline fields">
                 <div class="three wide field"></div>
                 <div class="twelve wide field">
-                <textarea role="8" cols="10" [(ngModel)]="obj.resultsAre" id="resultsAre"></textarea>
+                <textarea role="8" cols="10" [(ngModel)]="obj.resultsAre" id="resultsAre" name="resultsAre"></textarea>
                 </div>    
               </div>
               <div class="inline fields">
@@ -77,7 +77,7 @@
               <div class="inline fields">
                   <div class="three wide field"></div>
                   <div class="twelve wide field">
-                  <textarea role="8" cols="10" [(ngModel)]="obj.fromOperation"  id="fromOperation"></textarea>
+                  <textarea role="8" cols="10" [(ngModel)]="obj.fromOperation"  id="fromOperation" name="fromOperation"></textarea>
                   </div>    
                 </div>
         </div>
