--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/AskForMoney2.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/AskForMoney2.jrxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AskForMoney" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6f672709-ad0d-4577-a217-438622a92055">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AskForMoney" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6f672709-ad0d-4577-a217-438622a92055">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="logo1" class="java.io.InputStream"/>
+	<parameter name="fromOperation" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -255,6 +256,13 @@
 					<font fontName="TH Sarabun New" size="18"/>
 				</textElement>
 				<textFieldExpression><![CDATA["ผู้อำนวยการ"]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="38" y="48" width="470" height="398" uuid="106c1ac8-f1d2-46d1-9794-5b05de3ce113"/>
+				<textElement>
+					<font fontName="TH Sarabun New" size="14"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{fromOperation}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
