--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -15,8 +15,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <!-- <a href="javascript:;" routerLink="/ope04/1-1">กระดาษทำการรับวัตถุดิบ </a> -->
-                                                กระดาษทำการรับวัตถุดิบ
+                                                <a href="javascript:;" routerLink="/ope04/1-1">กระดาษทำการรับวัตถุดิบ </a>
+                                                <!-- กระดาษทำการรับวัตถุดิบ -->
                                             </div>
                                         </div>
                                     </div>
