--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1-1/ope04-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1-1/ope04-1-1.component.html
@@ -74,8 +74,8 @@
             <th style="text-align: center !important;" rowspan="2">ทะเบียนสรรพสามิต</th>
             <th style="text-align: center !important;" rowspan="2">เลขประจำตัวผู้เสียภาษี</th>
 
-            <th style="text-align: center !important;" rowspan="2">ประเภท</th>
-            <th style="text-align: center !important;" rowspan="2">พิกัด</th>
+            <!-- <th style="text-align: center !important;" rowspan="2">ประเภท</th>
+            <th style="text-align: center !important;" rowspan="2">พิกัด</th> -->
             <th style="text-align: center !important;" colspan="2">รอบระยะเวลาการตรวจสอบ</th>
             <th style="text-align: center !important;" rowspan="2"></th>
           </tr>
