--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1-2/ope04-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1-2/ope04-1-2.component.html
@@ -11,27 +11,20 @@
       <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
         <thead>
           <tr>
-            <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
-            <th style="text-align: center !important;" rowspan="2">รายการ</th>
-            <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
-            <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
-            <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
-          </tr>
-          <tr>
-            <th style="text-align: center !important;">จำนวนภาษี</th>
-            <th style="text-align: center !important;">ปริมาณ</th>
-            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
-
-            <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
-            <th style="text-align: center !important;">จำนวนภาษี</th>
-            <th style="text-align: center !important;">ปริมาณ</th>
-            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+            <th class="text-center">ลำดับที่</th>
+            <th class="text-center">รายการ</th>
+            <th class="text-center">ใบกำกับภาษี</th>
+            <th class="text-center">บัญชีประจำวัน</th>
+            <th class="text-center">งบเดือน</th>
+            <th class="text-center">จำนวนรับน้ำมัน</th>
+            <th class="text-center">ค่าสูงสุดของข้อมูล</th>
+            <th class="text-center">ผลต่างของคู่ข้อมูล</th>
           </tr>
         </thead>
 
       </table>
       <div class="ui stackable center aligned page grid">
-        <button class="mini button ui" type="button" (click)="back()"><i class="reply icon"></i>กลับ</button>
+        <button class="mini button ui" type="button" routerLink="/ope04/4-1"><i class="reply icon"></i>กลับ</button>
       </div>
       <br>
     </div>
