--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -132,7 +132,7 @@
             <br>
             <div class="ui center aligned grid">
                 <div class="six wide column">
-                    <button class="ui mini primary button" (click)="saveTable()" type="button" >
+                    <button class="ui mini primary button" (click)="saveTable()" type="button" [disabled]="btnSaveDisabled">
                         <i class="print icon"></i>
                         บันทึกข้อมูล
                     </button>
