--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
@@ -75,8 +75,8 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini primary button" (click)="saveData()">
-          <i class="file excel outline icon"></i>ส่งออก</button>
+        <button class="ui mini yellow button" (click)="saveData()">
+          <i class="print icon"></i>ส่งออก</button>
       </div>
     </div>
     <br>
