--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -24,8 +24,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <!-- <a href="javascript:;" routerLink="/ope04/2-1">กระดาษทำการจ่ายวัตถุดิบ</a> -->
-                                                กระดาษทำการจ่ายวัตถุดิบ
+                                                <a href="javascript:;" routerLink="/ope04/2-1">กระดาษทำการจ่ายวัตถุดิบ</a>
+                                                <!-- กระดาษทำการจ่ายวัตถุดิบ -->
                                             </div>
                                         </div>
                                     </div>
@@ -33,8 +33,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <!-- <a href="javascript:;" routerLink="/ope04/3-1">กระดาษทำการตรวจนับวัตถุดิบคงเหลือ</a> -->
-                                                กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
+                                                <a href="javascript:;" routerLink="/ope04/3-1">กระดาษทำการตรวจนับวัตถุดิบคงเหลือ</a>
+                                                <!-- กระดาษทำการตรวจนับวัตถุดิบคงเหลือ -->
                                             </div>
                                         </div>
                                     </div>
